# rdiffweb

./: .dockerignore  .gitignore  .gitlab-ci.yml  .project  .pydevproject  .travis.yml  CHANGELOG.md  CHANGES  Dockerfile  FUNDING.yml  Gruntfile.js  Jenkinsfile  MANIFEST.in  Makefile  PKG-INFO  README.md  SECURITY.md  babel.cfg  buildme.sh  minarca-server.conf  minarca-shell  minarca-shell.conf  package.json  pyproject.toml  rdiff-web  rdiff-web-config  rdiffweb-config  rdw.conf  rdw.conf.sample  rdw.db-shm  rdw.db-wal  requirements.txt  setup.cfg  setup.py  sonar-project.properties  sonar-project.properties.in  tox.ini
config/: rdw.conf
debian/: .gitignore  TODO  changelog  changelog.in  control  copyright  manpages  minarca-server.install  minarca-server.links  minarca-server.postinst  minarca-server.service  py3dist-overrides  rdiffweb.conffiles  rdiffweb.default  rdiffweb.dirs  rdiffweb.docs  rdiffweb.examples  rdiffweb.init  rdiffweb.install  rdiffweb.links  rdiffweb.lintian-overrides  rdiffweb.logrotate  rdiffweb.manpages  rdiffweb.postinst  rdiffweb.postrm  rdiffweb.preinst  rdiffweb.service  rules
debian/manpages/: minarca-server.1  rdiffweb-restore.1  rdiffweb.1
debian/source/: options
debian/tests/: control  smoke
debian/upstream/: metadata
doc/: .gitignore  README.md  access_tokens.md  api.md  conf.py  configuration-latest.md  configuration-ldap.md  configuration-oauth.md  configuration.md  development.md  fail2ban.md  faq.md  hardening.md  index.md  index.rst  installation.md  introduction.md  networking.md  quickstart.md  settings.md  two_factor_authentication.md  usage.rst
doc/_templates/: layout.html
docker/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh
extras/init/: rdiffweb
extras/logrotate/: rdiffweb
extras/nginx/: rdiffweb.conf  rdiffweb_root.conf
extras/prebuild/: Dockerfile
extras/systemd/: rdiffweb.service
init/: rdiff-web
init-script/: rdiffweb
minarca-server/: .gitlab-ci.yml  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  sonar-project.properties  tox.ini
minarca-server/docker/: Dockerfile  README.md  start.sh
minarca-server/minarca_server/: __init__.py  app.py  config.py  main.py  shell.py
minarca-server/packaging/: 10-minarca-server-userns.conf  minarca-server.1  minarca-server.conf  minarca-server.postinst  minarca-server.prerm  minarca-server.service  minarca-server.spec
minarca_plugins/: __init__.py  shell.py
minarca_plugins/tests/: __init__.py  test_minarca_plugins.py  test_shell.py
minarca_server/: __init__.py  app.py  config.py  main.py  shell.py
minarca_server/controller/: api.py
minarca_server/core/: contexts.py  jail.py  minarcaid.py  mount.py  namespaces.py
minarca_server/plugins/: minarca.py
minarca_server/tests/: __init__.py  test_app.py  test_main.py  test_shell.py
packaging/: minarca-server.postinst  minarca-server.postrm  minarca-server.prerm  minarca-server.service  minarca-server.spec
rdiffWeb/: db.py  db_file.py  db_ldap.py  db_mysql.py  db_sql.py  db_sqlite.py  email_notification.py  filter_authentication.py  filter_https.py  filter_setup.py  json.py  librdiff.py  page_admin.py  page_browse.py  page_error.py  page_history.py  page_locations.py  page_main.py  page_prefs.py  page_restore.py  page_setup.py  page_status.py  rdw_config.py  rdw_helpers.py  rdw_spider_repos.py  rdw_templating.py
rdiffWeb/static/: admin.js  ajax.js  borders.css  borders.js  globals.js  jquery.sortchildren.js  main.css  popups.js  script.js  setup.css  setup.js  timsort.js
rdiffWeb/templates/: admin.html  admin_main.html  dir_listing.html  email_notification.txt  error.html  history.html  login.html  message.html  nav_bar.html  page_end.html  page_start.html  prefs.html  repo_listing.html  setup.html  status.html  status.xml  user_prefs.html
rdiffweb/: __init__.py  api.py  archiver.py  authorizedkeys.py  core.py  db.py  db_file.py  db_ldap.py  db_mysql.py  db_sql.py  db_sqlite.py  dispatch.py  email_notification.py  exceptions.py  filter_authentication.py  filter_https.py  filter_setup.py  i18n.py  librdiff.py  main.py  notification.py  page_admin.py  page_browse.py  page_error.py  page_graphs.py  page_history.py  page_locations.py  page_login.py  page_logout.py  page_main.py  page_prefs.py  page_restore.py  page_settings.py  page_setup.py  page_status.py  pref_general.py  pref_sshkeys.py  rdw_app.py  rdw_config.py  rdw_deamon.py  (+10 more)
rdiffweb/components/: Breadcrumb.jinja  ButtonConfirm.jinja  Footer.jinja  Heatmap.css  Heatmap.jinja  HeatmapLegend.jinja  HeatmapYear.jinja  Icon.jinja  KpiCard.css  KpiCard.jinja  MfaCurrentBadgeWidget.jinja  ModalConfirm.jinja  ModalConfirm.js  ModalDialog.jinja  ModalDialog.js  NavItem.jinja  NavItemRepo.jinja  ProgressBar.jinja  RdwChart.jinja  RdwChart.js  RdwDateSelector.css  RdwDateSelector.jinja  RdwDateSelector.js  RdwEmpty.jinja  RdwFooter.jinja  RdwIcon.css  RdwIcon.jinja  RdwLog.css  RdwLog.jinja  RdwMessages.jinja  RdwModal.jinja  RdwTable.css  RdwTable.jinja  RdwTable.js  RdwTime.jinja  RepoCard.jinja  RepoStatus.jinja  RepoWarning.css  RepoWarning.jinja  SelectMultipleWidget.css  (+2 more)
rdiffweb/controller/: README  __init__.py  api.py  api_currentuser.py  api_openapi.py  cherrypy_wtf.py  dispatch.py  filter_authentication.py  filter_authorization.py  form.py  formdb.py  page_admin.py  page_admin_activity.py  page_admin_logs.py  page_admin_repos.py  page_admin_session.py  page_admin_sysinfo.py  page_admin_users.py  page_browse.py  page_delete.py  page_graphs.py  page_history.py  page_home.py  page_locations.py  page_login.py  page_logs.py  page_main.py  page_mfa.py  page_pref_general.py  page_pref_mfa.py  page_pref_notification.py  page_pref_session.py  page_pref_sshkeys.py  page_pref_tokens.py  page_prefs.py  page_repo_activity.py  page_restore.py  page_settings.py  page_stats.py  page_status.py  (+5 more)
rdiffweb/core/: README  __init__.py  activity.py  archiver.py  authorizedkeys.py  config.py  core.py  dircache.py  diskusage.py  (+22 more)
tests/: README.md  install-deb.sh  install-server-deb.sh  test-link.sh
testsuite/: rdw_templating.py
(+360 files in other folders)
