[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdiffweb"
authors = [
    {name = "Patrik Dufresne", email = "patrik@ikus-soft.com"},
]
description = "A web interface to rdiff-backup repositories."
readme = "README.md"
requires-python = ">=3.8, <4"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: CherryPy"
]
dependencies = [
    "apscheduler",
    "argon2-cffi>=18.3.0",
    "babel>=0.9.6",
    "cached-property",
    "CherryPy>=18",
    "cheroot<11",
    "configargparse",
    "distro",
    "humanfriendly",
    "Jinja2>=2.10",
    "ldap3",
    "MarkupSafe<3",
    "packaging",
    "psutil>=2.1.1",
    "pytz",
    "requests",
    "requests_oauthlib",
    "sqlalchemy>=1.4,<3",
    "WTForms>=2.2,<4",
    "zxcvbn>=4.4.27"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rdiffweb*"]

[project.optional-dependencies]
test = [
    "html5lib",
    "pytest",
    "parameterized",
    "responses",
    "selenium"
]

[project.scripts]
rdiffweb = "rdiffweb.main:main"

[project.urls]
Homepage = "https://rdiffweb.org"
documentation = "https://www.ikus-soft.com/archive/rdiffweb/doc/latest/html/"
source = "https://gitlab.com/ikus-soft/rdiffweb"
bug_tracker = "https://gitlab.com/ikus-soft/rdiffweb/-/issues"

[tool.black]
line-length = 120
skip-string-normalization = "True"

[tool.djlint]
indent=2

[tool.setuptools_scm]