[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdiffweb"
authors = [
    {name = "Patrik Dufresne", email = "patrik@ikus-soft.com"},
]
description = "A web interface to rdiff-backup repositories."
readme = "README.md"
requires-python = ">=3.8, <4"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: CherryPy"
]
dependencies = [
    "cherrypy-foundation>=1.0.4",
    "cherrypy-foundation[ldap]",
    "cherrypy-foundation[oauth]",
    "cherrypy-foundation[passwd]",
    "cherrypy-foundation[scheduler]",
    "cherrypy-foundation[db]",
    "cached-property",
    "configargparse",
    "distro",
    "humanfriendly",
    "packaging",
    "psutil>=2.1.1",
    "zxcvbn>=4.4.27"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rdiffweb*"]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "djlint==1.19.2",
    "flake8-copyright",
    "flake8==7.3.0",
    "isort>=5.0.1",
]
test = [
    "html5lib",
    "pytest",
    "parameterized",
    "responses",
    "selenium"
]

[project.scripts]
rdiffweb = "rdiffweb.main:main"

[project.urls]
Homepage = "https://rdiffweb.org"
documentation = "https://www.ikus-soft.com/archive/rdiffweb/doc/latest/html/"
source = "https://gitlab.com/ikus-soft/rdiffweb"
bug_tracker = "https://gitlab.com/ikus-soft/rdiffweb/-/issues"

[tool.black]
line-length = 120
skip-string-normalization = "True"

[tool.djlint]
indent=2

[tool.setuptools_scm]