[metadata]
name = rdiffweb
description = A web interface to rdiff-backup repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://rdiffweb.org/
author=Patrik Dufresne
author_email=patrik@ikus-soft.com
license = GPLv3
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: CherryPy

[options]
packages = 
    rdiffweb
include_package_data = True
install_requires = 
    apscheduler
    babel>=0.9.6
    cached-property
    CherryPy>=8.9.1
    configargparse
    distro
    humanfriendly
    Jinja2>=2.10
    ldap3
    MarkupSafe<3
    psutil>=2.1.1
    sqlalchemy
    WTForms<3.0.0
setup_requires = 
    babel>=0.9.6
    setuptools_scm
python_requires = >=3.6, <4

[options.entry_points]
console_scripts =
    rdiffweb = rdiffweb.main:main

[options.extras_require]
test = 
    pytest
    parameterized

[extract_messages]
keywords = _ gettext ngettext
mapping_file = babel.cfg
output-file = rdiffweb/locales/messages.pot
input-dirs = rdiffweb
width = 80

[init_catalog]
domain = messages
input-file = rdiffweb/locales/messages.pot
output-dir = rdiffweb/locales

[update_catalog]
domain = messages
input-file = rdiffweb/locales/messages.pot
output-dir = rdiffweb/locales

[compile_catalog]
domain = messages
directory = rdiffweb/locales

[compile_all_catalogs]
locales = en, fr, ru, es, ca
domain = messages
directory = rdiffweb/locales
